<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="app_name">Find Parking</string>
    <string name="action_about">About App</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_location">Current Location</string>
    <string name="enter_address">Enter Address</string>
    <string name="street">Street</string>
    <string name="city">City/Town</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="find_parking">Find Parking</string>
    <string name="search_parking">Search Parking</string>
    
    

</resources>